@@ -1424,8 +1424,11 @@ store e into ':OUTPATH:';\,
 b = load ':INPATH:/singlefile/studentcolon10k' using PigStorage(':') as (name, age, gpa);
 c = union a, b;
 d = group c by name;
-e = foreach d { f = order c by $1,$2; generate group, f; };
-store e into ':OUTPATH:';\,
+d1 = group c by name; -- Two separate groupbys to ensure secondary key partitioner
+e = foreach d { f = order c by age, gpa ; g = limit f 1; generate g; };
+h = foreach d1 { i = order c by age asc, gpa desc; j = limit i 1; generate j; };
+store e into ':OUTPATH:.1';
+store h into ':OUTPATH:.2';\,
             },
             {
             # Union + Orderby
